Bug 134846 - Templates are installed with wrong extension
Summary: Templates are installed with wrong extension
Status: RESOLVED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Sheets (KSpread) Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-09-29 14:42 UTC by Hasso Tepper
Modified: 2012-03-13 21:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hasso Tepper 2006-09-29 14:42:03 UTC
Version:           1.6 beta 1 (using KDE 3.5.4, compiled sources)
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.16-ck12

Templates are installed now as .kst files. 

1) They should be really Open Document templates which have .ots extension, not .kst. (At least I can't open them as KSpread files).
2) .kst is used for program called kst (http://kst.kde.org).

While using --template command line argument, I always have to use filter chooser because of second issue. From command line:

# kspread --template /usr/local/kde/share/apps/kspread/templates/Business/PackingSlip.desktop
koffice (filter manager): WARNING: Can't open application/x-kst, trying filter chooser
Comment 1 Thomas Zander 2006-09-29 14:54:43 UTC
Are extentions registered somewhere? I know mimetypes are registered at IANA but openoffice invented different extentions for 100% the same documents. I'd say we should not copy that hack as there is no reason to do so.
Comment 2 Hasso Tepper 2006-12-29 19:30:36 UTC
I think that we should just ...
a) follow de facto "standards" program with much bigger user base sets
b) not to conflict our own (KDE) applications

If a) isn't suitable, please feel free to explain situation to the KST authors.
Comment 3 Halla Rempt 2012-03-08 15:56:15 UTC
Git commit b8b1f5da6162285ce43d62a42cc434fcf57b958b by Boudewijn Rempt.
Committed on 08/03/2012 at 11:53.
Pushed by rempt into branch 'master'.

Save templates with the right extension

ots instead of kst.

M  +1    -1    tables/part/View.cpp

http://commits.kde.org/calligra/b8b1f5da6162285ce43d62a42cc434fcf57b958b
Comment 4 Halla Rempt 2012-03-09 13:04:25 UTC
Git commit ec1a0413e2d641be05fc60df9bc30cd6998cdb6f by Boudewijn Rempt.
Committed on 08/03/2012 at 11:53.
Pushed by rempt into branch '2.4'.

Save templates with the right extension

ots instead of kst.

M  +1    -1    tables/part/View.cpp

http://commits.kde.org/calligra/ec1a0413e2d641be05fc60df9bc30cd6998cdb6f
Comment 5 Halla Rempt 2012-03-13 21:58:19 UTC
Git commit fffa8c6ce8d081f2f216933e66d187a3c9f7d327 by Boudewijn Rempt.
Committed on 08/03/2012 at 11:53.
Pushed by rempt into branch 'calligra/2.4'.

Save templates with the right extension

ots instead of kst.

M  +1    -1    sheets/part/View.cpp

http://commits.kde.org/calligra/fffa8c6ce8d081f2f216933e66d187a3c9f7d327