Save templates with the right extension

ots instead of kst.
BUG:134846